Propagate googScreencastMinBitrate constraint to webrtc's RTCConfiguration.

BUG=607503

Review-Url: https://codereview.chromium.org/1931813002
Cr-Commit-Position: refs/heads/master@{#390642}

Former-commit-id: dd7121647559c1618171f4f11ffe910a14fc93f9